trunk/Andromeda/test/test-src/com/sc2mod/andromeda/test/junit/unittests/types/uncheckedCast.a
class X{

}

static{
	int i = (!! int) new X(); 	//works
	int j = (int) new X();		//error
}
